# coursework_3

./: README.md  pyproject.toml
src/: main.py
src/modules/: errors.py  transaction.py
src/utils/: functions.py
tests/: test_functions.py  test_transaction.py
tests/test_data/: test_operations_2.json
